style: :lipstick: creation of styles for login
styles are given to the login according to the sign in

the changes are implemented ok

--- a/exam/src/styles.css
+++ b/exam/src/styles.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+body{
+    height: 100vh; /* Ocupa toda la altura de la pantalla */
+    background: linear-gradient(to right, #4facfe, #00f2fe); /* Degradado bonito */
+}
 /* Estilo general del fondo */
 .signin {
     display: flex;
@@ -60,4 +64,7 @@
     font-size: 14px;
     margin-top: 5px;
   }
-  
+
+.login{
+    
+}
