--- a/exam/src/styles.css
+++ b/exam/src/styles.css
@@ -1,8 +1,12 @@
 @import "tailwindcss";
 
 body{
-    height: 100vh; /* Ocupa toda la altura de la pantalla */
-    background: linear-gradient(to right, #4facfe, #00f2fe); /* Degradado bonito */
+    hfont-family: 'Arial', sans-serif;
+    background: linear-gradient(to right, #00c6ff, #0072ff);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    height: 100vh;
 }
 /* Estilo general del fondo */
 .signin {
@@ -65,6 +69,3 @@ body{
     margin-top: 5px;
   }
 
-.login{
-    
-}
